fix: sidebar style issue on firefox, fixed #184

--- a/src/themes/basic/_layout.css
+++ b/src/themes/basic/_layout.css
@@ -227,7 +227,7 @@ main {
 .sidebar {
   border-right: 1px solid rgba(0, 0, 0, 0.07);
   overflow-y: auto;
-  padding: 40px 0;
+  padding: 40px 0 0;
   position: absolute 0 * 0 0;
   transition: transform 250ms ease-out;
   width: $sidebar-width;
@@ -252,6 +252,7 @@ main {
 
   .sidebar-nav {
     line-height: 2em;
+    padding-bottom: 40px;
   }
 
   ul {
